replaced nav buttons with nav-items to fix alignment

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -4,6 +4,10 @@ navbar {
   background: white;
   border-bottom: 1px solid black;
   box-shadow: 1px 1px 14px -3px black; */
+  
+  #logo img {
+    width: 200px;
+  }
 
   .container {
     width: 91%;
@@ -14,7 +18,7 @@ navbar {
   fullstack-logo {
     margin-top: 5px;
     margin-right: 20px;
-    width: 40px;
+    width: 100px;
   }
 
   a {
